[webextension] Made a fetch() wrapper
	This implementation of fetch() have the logic we want to interact with APIs.
	It also protect the user by checking for the 'https://' protocol.

--- a/i18n/l10n-C/webextension.po
+++ b/i18n/l10n-C/webextension.po
@@ -1,3 +1,7 @@
+msgctxt "webext_non_https_fetch"
+msgid "Something goes wrong with the webextension that attempted to use an API without https:// (%URL%)."
+msgstr ""
+
 msgctxt "webext_save_in_arcollect"
 msgid "Save in Arcollect"
 msgstr ""
