--- a/i18n/l10n-fr/webextension.po
+++ b/i18n/l10n-fr/webextension.po
@@ -1,3 +1,7 @@
+msgctxt "webext_non_https_fetch"
+msgid "Something goes wrong with the webextension that attempted to use an API without https:// (%URL%)."
+msgstr "Quelque chose s'est mal passé avec l'extension de navigateur qui a tenté d'utiliser une API sans https:// (%URL%)."
+
 msgctxt "webext_save_in_arcollect"
 msgid "Save in Arcollect"
 msgstr "Ajouter à Arcollect"
