--- a/i18n/l10n-fr/common.po
+++ b/i18n/l10n-fr/common.po
@@ -1,3 +1,3 @@
 msgctxt "summary"
-msgid "Your personal visual artwork library."
-msgstr "Votre collection personelle d'art visuel."
+msgid "Your personal visual artwork library"
+msgstr "Votre collection personelle d'art visuel"
