[DeviantArt content-script] Support the download button for registered users
	Registered users can download higher-res artworks with the link available thanks to a download button.

--- a/i18n/l10n-C/webextension.po
+++ b/i18n/l10n-C/webextension.po
@@ -1,3 +1,7 @@
+msgctxt "webext_access_token_expired_pls_refresh"
+msgid "Token access has expired. Refresh the page and try again."
+msgstr ""
+
 msgctxt "webext_non_https_fetch"
 msgid "Something goes wrong with the webextension that attempted to use an API without https:// (%URL%)."
 msgstr ""
